src/test/ui/imports/issue-57015.stderr
error[E0432]: unresolved import `single_err::something`
  --> $DIR/issue-57015.rs:10:5
   |
LL | use single_err::something;
   |     ^^^^^^^^^^^^^^^^^^^^^ no `something` in `single_err`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
